<resources>
    <string name="app_name">RPi Plants App</string>
    <string name="current_level_title">Current Level</string>
    <string name="optimal_level_title">Optimal Level</string>
    <string name="action_required_title">Action Required</string>
    <string name="current_level">BLANK</string>
    <string name="optimal_level">BLANK</string>
    <string name="action_text">BLANK</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_plant">Add plant</string>
    <string name="plant_name">Plant name</string>
    <string name="optimal_temp">Optimal temperature</string>
    <string name="plant_species">Plant species</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerAct</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="optimal_light">Optimal light</string>
    <string name="optimal_moisture">Optimal moisture</string>
    <string name="pubnub_subscribe_key">PubNub subscribe key</string>
    <string name="pubnub_publish_key">PubNub publish key</string>
    <string name="temp_switch_text">Toggle temperature</string>
    <string name="settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="channel">Channel</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="light_gpio_hint">Light GPIO #</string>
    <string name="moisture_gpio_hint">Moisture GPIO #</string>
    <string name="temperature_gpio_hint">Temperature GPIO #</string>
    <string name="set_gpio_pins">Set GPIO pins</string>

</resources>
