<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <TextView
        android:text="@string/add_plant"
        style="@style/DialogHeader_HoloBlueLight"/>
    <View
        style="@style/DialogDivider"/>
    <EditText
        android:id="@+id/plant_name_edit"
        android:inputType="textCapSentences"
        android:hint="@string/plant_name"
        style="@style/StandardEditText"/>
    <EditText
        android:id="@+id/plant_species_edit"
        android:inputType="textCapSentences"
        android:hint="@string/plant_species"
        style="@style/StandardEditText"/>
    <EditText
        android:id="@+id/optimal_temp_edit"
        android:inputType="number"
        android:hint="@string/optimal_temp"
        style="@style/StandardEditText"/>
    <EditText
        android:id="@+id/optimal_moisture_edit"
        android:inputType="number"
        android:hint="@string/optimal_moisture"
        style="@style/StandardEditText"/>
    <EditText
        android:id="@+id/optimal_light_edit"
        android:inputType="number"
        android:hint="@string/optimal_light"
        style="@style/StandardEditText"/>
    <EditText
        android:id="@+id/gpio_temp_edit"
        android:inputType="number"
        android:hint="@string/temperature_gpio_hint"
        style="@style/StandardEditText"/>
    <EditText
        android:id="@+id/gpio_moisture_edit"
        android:inputType="number"
        android:hint="@string/moisture_gpio_hint"
        style="@style/StandardEditText"/>
    <EditText
        android:id="@+id/gpio_light_edit"
        android:inputType="number"
        android:hint="@string/light_gpio_hint"
        style="@style/StandardEditText"/>

</LinearLayout>