<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">
    <TextView
        android:id="@+id/current_level_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_level_title"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:layout_marginTop="70sp"/>
    <TextView
        android:id="@+id/current_level_moisture"
        android:text="@string/current_level"
        android:layout_below="@+id/current_level_title"
        style="@style/TabStatText"/>
    <TextView
        android:id="@+id/optimal_level_title"
        android:text="@string/optimal_level_title"
        android:layout_below="@+id/current_level_moisture"
        style="@style/TabStatTitle"
      />
    <TextView
        android:id="@+id/optimal_level_moisture"
        android:text="@string/current_level"
        android:layout_below="@+id/optimal_level_title"
        style="@style/TabStatText"/>
    <TextView
        android:id="@+id/action_required_title"
        android:text="@string/action_required_title"
        android:layout_below="@id/optimal_level_moisture"
        style="@style/TabStatTitle"
       />
    <TextView
        android:id="@+id/action_req_moisture"
        android:text="@string/action_text"
        android:layout_below="@id/action_required_title"
        style="@style/TabStatText"/>
</RelativeLayout>

